# quicker-rs

./: Cargo.toml  README  README.md  index.html
.github/workflows/: wasm-preview.yml
kde/kwin-effect/: CMakeLists.txt  quickerradialeffect.cpp  quickerradialeffect.json
src/: action.rs  app.rs  config.rs  focus.rs  global_mouse.rs  lib.rs  main.rs  search.rs
src/app/: editor.rs  fonts.rs  overlay.rs  panel.rs
src/app/settings/: about.rs  launcher.rs  mod.rs  profiles.rs  storage.rs
