[package]
name = "quicker-rs"
version = "0.1.0"
edition = "2021"
description = "A portable, cross-platform quick-action launcher inspired by Quicker"
license = "MIT"

[dependencies]
# GUI - egui is extremely portable, compiles to a single binary
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Serialization for config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Global hotkeys (cross-platform)
global-hotkey = "0.6"

# Open files/URLs with system default handler
open = "5"

# File system helpers
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Fuzzy matching for search
fuzzy-matcher = "0.3"

# Process spawning
which = "7"

# Clipboard
arboard = "3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip symbols
codegen-units = 1   # Single codegen unit for better optimization
